[package]
name = "rkvm-client"
license = "MIT"
version = "0.6.1"
authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.0.1", features = [
    "macros",
    "time",
    "fs",
    "net",
    "signal",
    "rt-multi-thread",
    "sync",
] }
rkvm-input = { path = "../rkvm-input" }
rkvm-net = { path = "../rkvm-net" }
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.8.23"
env_logger = "0.11.8"
clap = { version = "4.2.2", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[package.metadata.rpm]
package = "rkvm-client"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
client = { path = "/usr/bin/rkvm-client" }
